--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GIT</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Aprendiendo GIT</h1>
-     <h2> A ver si sale esto!!
-     </h2>
+    
 </body>
 </html>
